--- a/src/main/resources/static/html/treeview.html
+++ b/src/main/resources/static/html/treeview.html
@@ -25,7 +25,7 @@
                 <input type="checkbox" name="" id="ch2">
                 <label for="ch2">Vegetables</label>
                 <ul>
-                    <li class="list">Lettuce</li>
+                    <li class="list"><a href="carto_2D.html">Lettuce</a></li>
                     <li class="list">Cabbage</li>
                     <li class="list">Carrot</li>
                 </ul>
